@@ -1,5 +1,8 @@
 2020-07-22  Allen D. Ball  <ball@hcf.dev>
 
+	* Added SSDPDiscoveryResponse, SSDPNotifyAliveRequest, and
+	SSDPNotifyByeByeRequest.
+
 	* Converted SSDPDiscoveryThread to SSDPDiscoveryService and use
 	Java 7 MulticastSocket.
 
